@@ -75,6 +75,7 @@ Ver.5.7-dev (in development)
                INTERMediatorLog.errorMessageOnAlert
 - IMLibFormat object is added, and it's a devided portion of INTERMediatorLib object.
   INTER-Mediator-Format.js file contains IMLibFormat object.
+- Add 'asis' operator for FileMaker Server.
 - All functions have 'use strict';.
 - Update deploy.sh and recipe.rb etc. for the INTER-Mediator-Server virtual machine and CI.
 - [BUG FIX] Fix to add multiple times for target node which has "#" started target description.
